[tool.poetry]
name = "text4gcn"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
gensim = "^4.3.2"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
stanfordcorenlp = "^3.9.1.1"
tabulate = "^0.9.0"
matplotlib = "^3.8.2"
torch = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
